--- a/VTPL/res/layout/activity_main.xml
+++ b/VTPL/res/layout/activity_main.xml
@@ -1,31 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity" >
+    android:id="@+id/main_single"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:baselineAligned="false"
+    android:orientation="horizontal" >
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="onButtonClick"
-        android:text="Button" />
-
-    <ScrollView
-        android:id="@+id/scrollContainer"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
-
-        <TableLayout
-            android:id="@+id/table"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp" >
-
-        </TableLayout>
-
-    </ScrollView>
+    <fragment
+		android:id="@+id/fragment2"
+		android:name="com.philipp_mandler.android.vtpl.SupplyPlanFragment"
+		android:layout_width="0dp"
+		android:layout_height="fill_parent"
+		android:layout_weight="1" />
 
 </LinearLayout>
