--- a/VTPL/res/layout/activity_main_tablet.xml
+++ b/VTPL/res/layout/activity_main_tablet.xml
@@ -13,10 +13,11 @@
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
-    <FrameLayout
+    <fragment
+        android:id="@+id/fragment1"
+        android:name="com.philipp_mandler.android.vtpl.VtplDetailFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2" >
-    </FrameLayout>
+        android:layout_weight="2" />
 
 </LinearLayout>
