--- a/VTPL/res/layout/list_header.xml
+++ b/VTPL/res/layout/list_header.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="#333" >
 
     <TextView
-        android:id="@+id/list_header_title" 
+        android:id="@+id/list_header_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="" />
+        android:layout_centerInParent="true"
+        android:text=""
+        android:textColor="#fff" />
 
-</LinearLayout>
+</RelativeLayout>
