--- a/VTPL/res/layout/list_item.xml
+++ b/VTPL/res/layout/list_item.xml
@@ -8,6 +8,7 @@
 	<LinearLayout
 	    android:layout_width="0dp"
 	    android:layout_height="wrap_content"
+	    android:layout_gravity="center_vertical"
 	    android:layout_marginLeft="16dp"
 	    android:layout_weight="0.4"
 	    android:orientation="vertical" >
@@ -16,14 +17,18 @@
             android:id="@+id/text_class"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
             android:text=""
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:singleLine="true" />
 
         <TextView
             android:id="@+id/text_lesson"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:ellipsize="end"
+            android:text=""
+            android:singleLine="true" />
 
     </LinearLayout>
 
