--- a/VTPL/res/layout/activity_main.xml
+++ b/VTPL/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_height="match_parent"
         android:background="#88000000"
         android:clickable="true"
+        android:onClick="onFrameLayout3Clicked"
         android:visibility="invisible" >
 
         <FrameLayout
