--- a/VTPL/res/layout/list_header.xml
+++ b/VTPL/res/layout/list_header.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#333" >
 
-    <TextView
-        android:id="@+id/list_header_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text=""
-        android:textColor="#fff" />
+<RelativeLayout
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:minHeight="34dp"
+		android:orientation="vertical"
+		android:background="#333"
+		xmlns:android="http://schemas.android.com/apk/res/android">
+
+	<TextView
+			android:id="@+id/list_header_title"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_centerInParent="true"
+			android:text=""
+			android:textColor="#fff" />
 
 </RelativeLayout>
